# compiz

./: .gitignore  AUTHORS  INSTALL  Makefile.am  README  README.rst  autogen.sh  configure.ac
bcop/: Makefile.am  bcop.in  bcop.xslt
compizconfig/ccsm/: AUTHORS  INSTALL  LICENSE  MANIFEST.in  ccsm  ccsm.desktop.in  setup.py
compizconfig/ccsm/ccm/: Conflicts.py  Constants.py.in  Pages.py  Settings.py  Utils.py  Widgets.py  Window.py  __init__.py
compizconfig/ccsm/po/: ChangeLog  LINGUAS  Makevars  POTFILES.in  ar.po  as.po  be.po  bg.po  bn.po  bn_IN.po  ca.po  ccsm.pot  cs.po  da.po  de.po  el.po  en_GB.po  es.po  eu.po  fa.po  fi.po  fr.po  gl.po  gu.po  he.po  hi.po  hr.po  hu.po  id.po  it.po  ja.po  ko.po  md.po  ml_IN.po  nb.po  nl.po  or.po  pa.po  pl.po  pt.po  (+8 more)
compizconfig/compizconfig-python/: Makefile.am  acinclude.m4  autogen.sh  compizconfig-python.pc.in  configure.ac
compizconfig/compizconfig-python/src/: Makefile.am  compizconfig.pyx
compizconfig/libcompizconfig/: Makefile.am
compizconfig/libcompizconfig/backend/: Makefile.am  ini.c
compizconfig/libcompizconfig/plugin/: Makefile.am  ccp.c
compizconfig/libcompizconfig/src/: Makefile.am  bindings.c  compiz.cpp  config.c  ini.c  iniparser.c  iniparser.h  main.c
contrib/bcop/: AUTHORS  Makefile.am  bcop.pc.in  configure.ac
contrib/plugins-main/metadata/: Makefile.am
contrib/plugins-main/src/: Makefile.am
contrib/plugins-main/src/resizeinfo/: Makefile.am
contrib/plugins-main/src/text/: Makefile.am
contrib/plugins-main/src/thumbnail/: Makefile.am
gtk/gnome/: Makefile.am
gtk/window-decorator/: gtk-window-decorator.c
include/: Makefile.am  compiz-core.h  compiz-cube.h  compiz-helpers.h  compiz-mousepoll.h  compiz-plugin.h  compiz-scale.h  compiz-text.h  compiz.h  decoration.h
kde/window-decorator/: Makefile.am
libdecoration/: decoration.c
metadata/: Makefile.am  core.xml.in.in  cube.xml.in  ezoom.xml.in
plugins/: Makefile.am  annotate.c  blur.c  clone.c  colorfilter-parser.c  colorfilter-parser.h  colorfilter.c  commands.c  cube.c  dbus.c  decoration.c  expo.c  ezoom.c  fade.c  fuse.c  gconf.c  glib.c  gnomecompat.c  imgjpeg.c  ini.c  inotify.c  kconfig.cpp  kdecompat.c  lolconf.c  mag.c  minimize.c  mousepoll.c  move.c  neg.c  obs.c  opacify.c  place.c  png.c  put.c  regex.c  resize.c  resizeinfo.c  ring.c  rotate.c  scale.c  (+20 more)
plugins/animation/: Makefile.am  animation-internal.h  animation.c  compiz-animation.h  curvedfold.c  dodge.c  dream.c  fade.c  focusfade.c  glide.c  horizontalfold.c  magiclamp.c  options.c  rollup.c  wave.c  zoomside.c
po/: POTFILES.in
src/: Makefile.am  action.c  core.c  cursor.c  display.c  event.c  fragment.c  main.c  match.c  matrix.c  metadata.c  object.c  option.c  paint.c  plugin.c  privates.c  screen.c  session.c  texture.c  window.c
